реализована карусель трендовых gif, стоит еще поработать над анимацией исчезновения и появления кнопок управления карусели

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         <h2 class="trending__header">Трендовые Gif</h2>
         <div class="trending__slider">
           <div class="trending__slider-window">
-            <div class="trending__slides">
+            <div class="trending__slides"></div>
+            <div class="trending__btn trending__btn--forward">
+              <div class="trending__arrow trending__arrow--forward"></div>
             </div>
-            <div class="trending__forwardBtn"></div>
-            <div class="trending__backBtn"></div>
+            <div class="trending__btn trending__btn--back">
+              <div class="trending__arrow trending__arrow--back"></div>
+            </div>
           </div>
         </div>
       </div>
