--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           </div>
         </div>
       </div>
-      <div class="todays">
-        <h2 class="todays__header">Сегодняшнее</h2>
+      <div class="search-results">
+        <h2 class="search-results__header">Результаты поиска</h2>
+        <div class="search-results__container"></div>
       </div>
     </main>
     <footer class='footer'></footer>
