сделана начальная реализация поисковой  выдачи и кнопки показать больше

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <div class="search-results">
         <h2 class="search-results__header">Результаты поиска</h2>
         <div class="search-results__container"></div>
+        <button class="search-results__show-more">Показать больше</button>
       </div>
     </main>
     <footer class='footer'></footer>
