реализован показ оригинального размера гиф при нажатии на него, с выводом названия

--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
         </div>
       </div>
       <div class="search-results">
-        <h2 class="search-results__header">Результаты поиска</h2>
+        <h2 class="search-results__header"></h2>
         <div class="search-results__container"></div>
         <button class="search-results__show-more">Показать больше</button>
       </div>
     </main>
     <footer class='footer'></footer>
+  </div>
+  <div class="full-screen">
+    <div class="full-screen__popup">
+      <div class="full-screen__close-btn">x</div>
+      <h1 class="full-screen__title"></h1>
+      <div class="full-screen__img-wrap"></div>
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
