добавлен логотип Powered by Giphy

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="wrapper">
     <header class='header'>
       <div class="header-wrap">
-        <a href="#" class="header__logo-link">
-          <div class="logo">LOGO</div>
+        <a href="https://developers.giphy.com" class="header__logo-link" target="_blank">
+          <img src='img/logo.png' alt='logo' class="header__logo-img">
         </a>
         <div class="search">
           <form class='search__form'>
