--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="search">
           <form class='search__form'>
             <input type="text" class='search__query-field'>
-            <button class="search__button">Искать</button>
+            <button class="search__button">Поиск</button>
           </form>
         </div>
       </div>
