начал обрабатывать условие исчезновения кнопки 'показать больше' при достижении конца результатов, появилась ошибка при вводе двух русских слов

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Giphy API</title>
 </head>
 <body>
   <div class="wrapper">
@@ -43,7 +41,6 @@
         <button class="search-results__show-more">Показать больше</button>
       </div>
     </main>
-    <footer class='footer'></footer>
   </div>
   <div class="full-screen">
     <div class="full-screen__popup">
