будет реализован новый вывод результатов поиска

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
       </div>
       <div class="search-results">
         <h2 class="search-results__header"></h2>
-        <div class="search-results__container"></div>
+        <div class="search-results__container">
+          <div class="search-results__col search-results__col--1"></div>
+          <div class="search-results__col search-results__col--2"></div>
+          <div class="search-results__col search-results__col--3"></div>
+          <div class="search-results__col search-results__col--4"></div>
+<!--           <div class="search-results__col search-results__col--5"></div> -->
+        </div>
         <button class="search-results__show-more">Показать больше</button>
       </div>
     </main>
