размеры сделаны в относительных величинах, начал писать медиазапросы, внесены некоторые правки в скрипт

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class='header'>
       <div class="header-wrap">
         <a href="https://developers.giphy.com" class="header__logo-link" target="_blank">
-          <img src='img/logo.png' alt='logo' class="header__logo-img">
+<!--           <img src='img/logo.png' alt='logo' class="header__logo-img"> -->
         </a>
         <div class="search">
           <form class='search__form'>
