поправлены некоторые ошибки в отображении формы поиска

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
         <div class="search">
           <form class='search__form'>
-            <input type="text" class='search__query-field'>
+            <input type="text" class='search__query-field' placeholder='Введите запрос'>
             <button class="search__button">Поиск</button>
           </form>
         </div>
