работаю над блоком трендов до 767px

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="css/style.css">
   <title>Giphy API</title>
 </head>
@@ -25,7 +26,11 @@
         <h2 class="trending__header">Трендовые Gif</h2>
         <div class="trending__slider">
           <div class="trending__slider-window">
-            <div class="trending__slides"></div>
+            <div class="trending__slides">
+              <div class="trending__col trending__col--1"></div>
+              <div class="trending__col trending__col--2"></div>
+              <div class="trending__col trending__col--3"></div>
+            </div>
             <div class="trending__btn trending__btn--forward">
               <div class="trending__arrow trending__arrow--forward"></div>
             </div>
