--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
   <div class="full-screen">
     <div class="full-screen__popup">
-      <div class="full-screen__close-btn"></div>
+      <div class="full-screen__close-btn">&times;</div>
       <h1 class="full-screen__title"></h1>
       <div class="full-screen__img-wrap"></div>
     </div>
