сделал разбивку скрипта на отдельные файлы

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       <div class="full-screen__img-wrap"></div>
     </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/vars-and-helpers.js"></script>
+  <script src="js/trends.js"></script>
+  <script src="js/serch.js"></script>
+  <script src="js/stickSearchForm.js"></script>
+  <script src="js/clickEnlargeImg.js"></script>
 </body>
 </html>
